--- a/examples/Charts/simplecharts2/mainwidget.ui
+++ b/examples/Charts/simplecharts2/mainwidget.ui
@@ -6,50 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>684</width>
+    <height>429</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>QSint::Charts Demo</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="1" column="0">
-    <widget class="QSint::BarChartPlotter" name="Chart1" native="true"/>
-   </item>
-   <item row="1" column="1">
-    <widget class="QSint::PieChart" name="Chart2" native="true"/>
-   </item>
-   <item row="3" column="0">
-    <widget class="QSint::BarChartPlotter" name="Chart3" native="true"/>
-   </item>
-   <item row="3" column="1">
-    <widget class="QSint::BarChartPlotter" name="Chart4" native="true"/>
-   </item>
    <item row="0" column="0">
-    <widget class="QLabel" name="label">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="font">
-      <font>
-       <pointsize>12</pointsize>
-       <weight>50</weight>
-       <bold>false</bold>
-      </font>
-     </property>
-     <property name="text">
-      <string>Stacked Barchart</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignCenter</set>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="1">
     <widget class="QLabel" name="label_2">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
@@ -65,14 +30,43 @@
       </font>
      </property>
      <property name="text">
-      <string>Piechart</string>
+      <string>Pie Chart</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
      </property>
     </widget>
    </item>
+   <item row="1" column="0">
+    <widget class="QSint::PieChart" name="Chart2" native="true"/>
+   </item>
+   <item row="1" column="1" colspan="2">
+    <widget class="QSint::BarChartPlotter" name="Chart4" native="true"/>
+   </item>
    <item row="2" column="0">
+    <widget class="QLabel" name="label_5">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>12</pointsize>
+       <weight>50</weight>
+       <bold>false</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>Ring Chart</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="1">
     <widget class="QLabel" name="label_3">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
@@ -95,7 +89,39 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="1">
+   <item row="2" column="2">
+    <widget class="QLabel" name="label">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>12</pointsize>
+       <weight>50</weight>
+       <bold>false</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>Stacked Barchart</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0">
+    <widget class="QSint::RingChart" name="Chart5" native="true"/>
+   </item>
+   <item row="3" column="1">
+    <widget class="QSint::BarChartPlotter" name="Chart3" native="true"/>
+   </item>
+   <item row="3" column="2">
+    <widget class="QSint::BarChartPlotter" name="Chart1" native="true"/>
+   </item>
+   <item row="0" column="1" colspan="2">
     <widget class="QLabel" name="label_4">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
@@ -130,6 +156,12 @@
   </customwidget>
   <customwidget>
    <class>QSint::PieChart</class>
+   <extends>QWidget</extends>
+   <header location="global">QSintCharts</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>QSint::RingChart</class>
    <extends>QWidget</extends>
    <header location="global">QSintCharts</header>
    <container>1</container>
